--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -1,4 +1,7 @@
+<%= link_to "Add url", new_url_path %>
 <% @urls.each do |url| %>
-  <%= url.given_url %>
-  <%= "Slug: #{url.slug}" %>
+  <ul>
+    <li><%= url.given_url %></li>
+    <li>Shortened link: <%= link_to "jet.fuel/#{url.slug}", "/#{url.slug}" %></li>
+  </ul>
 <% end %>
