--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -3,5 +3,6 @@
   <ul>
     <li><%= url.given_url %></li>
     <li>Shortened link: <%= link_to "jet.fuel/#{url.slug}", "/#{url.slug}" %></li>
+    <li>Hits: <%= url.hits %></li>
   </ul>
 <% end %>
