--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -1,8 +1,10 @@
 <%= link_to "Add url", new_url_path %>
+<%= link_to "Sort by popularity", root_path(popularity: "true") %>
 <% @urls.each do |url| %>
   <ul>
     <li><%= url.given_url %></li>
     <li>Shortened link: <%= link_to "jet.fuel/#{url.slug}", "/#{url.slug}" %></li>
     <li>Hits: <%= url.hits %></li>
+    <li><%= url.pretty_created_at %></li>
   </ul>
 <% end %>
