--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -2,6 +2,7 @@
 <%= link_to "Sort by popularity", root_path(popularity: "true") %>
 <% @urls.each do |url| %>
   <ul>
+    <li>Title: <%= url.title %></li>
     <li><%= url.given_url %></li>
     <li>Shortened link: <%= link_to "jet.fuel/#{url.slug}", "/#{url.slug}" %></li>
     <li>Hits: <%= url.hits %></li>
